Doh! Got so excited that I didn't make commits today. Adding a new party works (including getting the user's timezone with javascript and saving a timezone aware object with pytz), fixed how form field length is now a percentage, making them dynamic. In the process of rewriting the party profile page I have added flows for inviting and uninviting guests to party.

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -39,6 +39,11 @@ def flash_errors(form):
             flash(u"Error in the <strong>%s</strong> field - %s" %
                   (getattr(form, field).label.text, error), 'danger')
 
+
+{% macro render_no_label_field(field) %}
+  <dd>{{ field(**kwargs)|safe }}
+{% endmacro %}
+
 <!-- http://bear-z.com/python/render-bootstrap-3-forms-with-wtforms-and-jinja/
  -->
 
