--- a/app/templates/anonymous.html
+++ b/app/templates/anonymous.html
@@ -60,20 +60,19 @@
 
           <!-- ------------ -->
 
+          <div class="container-fluid">
             <div class="container-fluid">
-              <div class="container-fluid">
-                  <div class="container">
-                    {% with messages = get_flashed_messages(with_categories=true) %}
-                      {% if messages %}
-                        {% for category, message in messages %}
-                              {% if category is equalto 'message' %}
-                                  <div class="alert alert-info">{{ message }}</div>
-                              {% endif %}
-                        {% endfor %}
-                      {% endif %}
-                    {% endwith %}
-                  </div>
-              </div>
+                <div class="container">
+                  {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                      {% for message in messages %}
+                         <div class="alert alert-info alert-dismissible" role="alert">{{ message }}
+                          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+                      {% endfor %}
+                    {% endif %}
+                  {% endwith %}
+                </div>
+            </div>
 
             {% block content %}
 
