--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -5,21 +5,21 @@
 {% block page_content %}
 
 
-<div class="page-header">
+<div>
     <h1>Change Account Email Address</h1>
 </div>
 
-<div class="row well-spaced">
+<div class="row well-spaced" style="padding-top: 2em">
     <div class="col-md-4 col-md-offset-4">
         <div class = "row round_hidden_div" style="padding-top: 2em">
             <div class="text-muted" style="padding-bottom: 2em">Changing your email address will require you to confirm your account again, similar to what you did when you registered.</div>
             {% from "_formhelpers.html" import render_field %}
             <form class="form form-horizontal" method="post" role="form" id="changeEmail">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                    {{ render_field(form.email, cols="40", rows="1", maxlength=200) }}
-                    {{ render_field(form.email2, cols="40", rows="1", maxlength=200) }}
-                    {{ render_field(form.password, cols="40", rows="1") }}<br>
-                <input type="submit" class="btn btn-sm btn-default" value="Submit">
+                    {{ render_field(form.email, style="width: 75%", rows="1", maxlength=200) }}
+                    {{ render_field(form.email2, style="width: 75%", rows="1", maxlength=200) }}
+                    {{ render_field(form.password, style="width: 75%", rows="1") }}<br>
+                <input type="submit" class="btn btn-sm btn-info btn-default" value="Submit">
             </form>
         </div>   
     </div>
