--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,14 +10,15 @@
 <div class="row well-spaced" style="padding-top: 3em">
     <div class="col-md-4 col-md-offset-4">
         <div class = "row round_hidden_div form-group" style="padding-top: 2em">
-            {% from "_formhelpers.html" import render_field, render_checkbox_field %}
+            {% from "_formhelpers.html" import render_field, render_checkbox_field, render_no_label_field %}
             <form name="login-form" id="login-form"class="form form-horizontal" method="post" role="form">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <dl>
-                    {{ render_field(login_form.email, cols="40", rows="1") }}<br>
-                    {{ render_field(login_form.password, cols="40", rows="1") }}<br>
+                    {{ render_no_label_field(login_form.timezone, id="timezone") }}
+                    {{ render_field(login_form.email, style="width: 75%") }}<br>
+                    {{ render_field(login_form.password, style="width: 75%") }}<br>
                     {{ render_checkbox_field(login_form.remember_me)  }}<br>
-                    <input name='submit1' type=submit class="btn" value='submit'>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
+                    <input name='submit1' type=submit class="btn btn-info" value='submit'>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
                 </dl>
 
             </form>
@@ -39,8 +40,8 @@
                         {% from "_formhelpers.html" import render_field %}
                         <form action="{{ url_for('auth.process_reset')  }}" name="reset_password_request_form" id="reset_password_request_form" class="form form-horizontal" method="post" role="form">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                            {{ render_field(reset_password_request_form.email, cols="40", rows="1") }}
-                            <input type="submit" class="btn btn-sm btn-default" value="Submit">
+                            {{ render_field(reset_password_request_form.email, style="width: 75%") }}<br>
+                            <input type="submit" class="btn btn-sm btn-info btn-default" value="Submit">
                         </form>
                     </div>
                 </div>     
@@ -48,5 +49,7 @@
         </div>
     </div>
 </div>
+
+<script src="{{ url_for('static', filename = 'js/login_timezone.js') }}" type="text/javascript"></script>
 
 {% endblock %}
