--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,17 +45,12 @@
 
     <div class="modal fade" id="addPartyModal" tabindex="-1" role="dialog" aria-labelledby="addPartyModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content" id="addPartyModal">
+            <div class="modal-content" id="loadAddPartyHere">
                 
             </div>
             <script src="{{ url_for('static', filename = 'js/addParty.js') }}" type="text/javascript"></script>  
         </div>
     </div>
-
-
-
-
-
 
 
 <!-- Begin navbar -->
@@ -121,24 +116,19 @@
 
 <!-- ------------ -->
 
+  <div class="container-fluid">
     <div class="container-fluid">
-      <div class="container-fluid">
-          <div class="container">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-              {% if messages %}
-                {% for category, message in messages %}
-                      {% if category is equalto 'message' %}
-                          <div class="alert alert-info">{{ message }}</div>
-                      {% else %}
-                          <div class="alert alert-{{ category }} alert-dismissible" role="alert">{{ message }}
-                          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-                      {% endif %}
-                {% endfor %}
-              {% endif %}
-            {% endwith %}
-          </div>
-      </div>
-
+        <div class="container">
+          {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              {% for message in messages %}
+                       <div class="alert alert-info alert-dismissible" role="alert">{{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </div>
+    </div>
 
     {% block content %}
         <div id="extending">
