--- a/app/templates/profiles/party_profile.html
+++ b/app/templates/profiles/party_profile.html
@@ -27,6 +27,62 @@
     </div>
 </div>
 
+<div class="modal fade" id="titleModal" tabindex="-1" role="dialog" aria-labelledby="changeTitleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="changeTitleModalLabel">Change Party Title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+                {% from "_formhelpers.html" import render_field %}
+                    <form action="{{ url_for('profiles.changetitle') }}" class="form form-horizontal" method="post" role="form" id="changeTitle">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <input type="hidden" name="party_id" value="{{  party.party_id  }}"/>
+                        {{ render_field(titleform.title,  style="width: 75%", rows="1") }}<br>
+                        <input type="submit" class="btn btn-sm btn-info btn-default" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>  
+            </div>
+        </div>
+         <script src="{{ url_for('static', filename = 'js/partyTitle.js') }}" type="text/javascript"></script>
+    </div>
+</div>
+
+
+<div class="modal fade" id="dateTimeModal" tabindex="-1" role="dialog" aria-labelledby="datetimeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="datetimeModalLabel">Change Party Date and/or Time</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+                <div id="ff-flashedalert"></div>
+
+                <strong>Current date and time:</strong> <span class="dtm-dtm">{{ moment(party.datetime_of_party).format('LLLL') }}</span>
+
+                {% from "_formhelpers.html" import render_field, render_inline_field %}
+                    <form action="{{ url_for('profiles.party_datetime') }}" class="form form-horizontal" method="post" role="form" id="party_datetime">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                    <input type="hidden" name="party_id" value="{{  party.party_id  }}"/>
+                        {{ render_field(datetimeform.date) }}<br>
+                        {{ render_field(datetimeform.hour) }}<br>
+                        <input type="submit" class="btn btn-sm btn-info" value="Submit">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <script src="{{ url_for('static', filename = 'js/datetime.js') }}" type="text/javascript"></script>
+    </div>
+</div>
+
  <!-- End modals -->
 
 
@@ -43,18 +99,18 @@
                         Last updated {{ moment(party.last_updated).format('LLLL') }}
                     </div>
                 </div>
-                <div class="title">
-                    <div id="title">
+                <div class="partytitle">
+                    <div id="partytitle">
                         <button type="button" class="btn btn-sm btn-default" data-toggle="modal" data-target="#titleModal">
                             <span class="glyphicon glyphicon-pencil text-info" title="Change the party title" aria-hidden="true"></span>
                         </button>&emsp; <strong>Title:</strong>&emsp;{{  party.title  }}
                     </div>
                 </div>
-                <div class="date">
-                    <div id="date">
-                        <button type="button" class="btn btn-sm btn-default" data-toggle="modal" title="Change the date or time of the party" data-target="#dateModal">
+                <div class="dtm">
+                    <div id="dtm">
+                        <button type="button" class="btn btn-sm btn-default" data-toggle="modal" title="Change the date or time of the party" data-target="#dateTimeModal">
                             <span class="glyphicon glyphicon-pencil text-info" aria-hidden="true"></span>
-                        </button>&emsp; <strong>Date:</strong>&emsp;{{ moment(party.datetime_of_party).format('LLLL') }}
+                        </button>&emsp; <strong>Date:</strong>&emsp;<span class="dtm-dtm">{{ moment(party.datetime_of_party).format('LLLL') }}</span>
                     </div>
                 </div>
                 <div class="noted">
