--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,15 @@
         </div>
     </div>
 
+    <div class="modal fade" id="addFriendProfileModal" tabindex="-1" role="dialog" aria-labelledby="addFriendProfileModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" id="loadAddFriendProfileHere">
+                
+            </div>
+            <script src="{{ url_for('static', filename = 'js/addFriendProfile.js') }}" type="text/javascript"></script>  
+        </div>
+    </div>
+
     <div class="modal fade" id="addPartyModal" tabindex="-1" role="dialog" aria-labelledby="addPartyModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content" id="loadAddPartyHere">
